crates/toml/tests/snapshots/invalid/control/multi-del.stderr
TOML parse error at line 1, column 21
  |
1 | multi-del  = """null"""
  |                     ^
invalid multi-line basic string, expected `\`, characters
